--- a/SDL/SDLModels/SDLModels.csproj
+++ b/SDL/SDLModels/SDLModels.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
   </ItemGroup>
 
 </Project>
